swap collection.toList toList (#1330)
* swap collection.toList toList

* checkstyle

* removed unused imports

* revert back to mutable collection list

* revert task search to mutable list